--- a/src/pages/index/style.less
+++ b/src/pages/index/style.less
@@ -1,5 +1,16 @@
 .container {
-  .title {
-    background: rgb(121, 242, 157);
+  .content1 {
+    background-color: red;
+    height: 8rem;
+  }
+
+  .content2 {
+    background-color: yellow;
+    height: 8rem;
+  }
+
+  .content3 {
+    background-color: green;
+    height: 8rem;
   }
 }
